--- a/css/styles.css
+++ b/css/styles.css
@@ -10,3 +10,16 @@ body {
   padding: 10px;
   margin-bottom: 10px;
 }
+
+
+h1 {
+    background-color: green;
+}
+
+div {
+    background-color: lightblue;
+}
+
+p {
+    background-color: yellow;
+}
